--- a/style.css
+++ b/style.css
@@ -1,3 +1,6 @@
+* {
+   color: whitesmoke;
+}
 body {
    background-color: #003333;
 }
@@ -8,5 +11,4 @@ body {
 
 p {
    color: whitesmoke;
-   text-align: center;
 }
