--- a/style.css
+++ b/style.css
@@ -3,12 +3,11 @@
 }
 
 body {
-   background-color: #003333;
-   color: whitesmoke;
+   background-color: #999;
 }
 
 #wrapper {
-   background-color: grey;
+   background-color: #fff;
    margin: 0 auto;
    padding: 2.5rem;
    width: 60rem;
