--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@ body {
 
 #wrapper {
    background-color: #fff;
-   box-sizing: 0 0 2px 5px #000;
+   box-shadow: 0 0 5px #000;
    margin: 4rem auto;
    padding: 2.5rem;
    width: 60rem;
