--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 * {
    margin: 0;
    --color00: #000;
-   --color15: #2a3f4f;
+   --color15: #eeeeee;
    --color30: #dddddd;
    --color50: #42647f;
    --color75: #bbbbbb;
