--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@
 }
 
 body {
-   background-color: var(--color30);
+   background-color: var(--color75);
 }
 
 nav {
@@ -47,7 +47,7 @@ header {
    flex-wrap: nowrap;   
 }
 
-.wrapper.nav a:not(:nth-child(1)) {
+.wrapper.nav a:not(:first-child) {
    margin-left: 2rem;
 }
 
@@ -69,6 +69,7 @@ nav a:hover {
 .wrapper.main {
    width: 1000px;
    margin-top: 4rem;
+   padding: 2rem;
    background-color: var(--secondary);
 }
 
