--- a/style.css
+++ b/style.css
@@ -120,7 +120,7 @@ h2 {
 }
 
 p, h2 {
-   margin: 1rem 0;
+   margin: 1.5rem 0;
 }
 
 /* main */
@@ -157,3 +157,5 @@ h2.goals {
    height: 100px;
    margin-right: 100px;
 }
+
+/* definitions */
