--- a/style.css
+++ b/style.css
@@ -127,7 +127,7 @@ p, h2 {
 .wrapper.main {
    margin-top: 4rem;
    padding: 2rem;
-   font-size: 14px;
+   /* font-size: 14px; -- problem as it isn't the main parent NOTICE ME */
    background-color: var(--secondary);
 }
 
@@ -161,4 +161,13 @@ h2.goals {
 /* definitions */
 dl {
    display: grid;
+   grid-template-columns: 40% 60%;
+}
+
+dt, dd {
+   padding: 0.5rem;
+}
+
+dl:nth-child(:nth-child(2n+1)) {
+   background-color: black;
 }
