--- a/style.css
+++ b/style.css
@@ -164,10 +164,10 @@ dl {
    grid-template-columns: 40% 60%;
 }
 
-dt, dd {
-   padding: 0.5rem;
+dl:nth-child(2n+1) {
+   background-color: var(--color75);
 }
 
-dl:nth-child(:nth-child(2n+1)) {
-   background-color: black;
+dt, dd {
+   padding: 0.5rem;
 }
