--- a/style.css
+++ b/style.css
@@ -5,32 +5,34 @@
    margin: 0;
    font-size: 16px;
    font-family: 'Lato';
-   --primary: #000000;
-   --color15: #aaaaaa;
-   --color30: #bbbbbb;
-   --accent: #42647f;
-   --color75: #dddddd;
-   --color85: #eeeeee;
-   --secondary: #ffffff;
+   --color-base-00: #000000;
+   --color-base-20: #666666;
+   --color-base-30: #888888;
+   --color-base-40: #aaaaaa;
+   --color-base-50: #bbbbbb;
+   --color-base-60: #dddddd;
+   --color-base-80: #eeeeee;
+   --color-base-100: #ffffff;
+   --color-accent: #42647f;
 }
 
 
 /* semantic blocks */
 body {
-   background-color: var(--color75);
+   background-color: var(--color-base-60);
 }
 
 nav {
    width: 100%;
    height: 4rem;
-   background-color: white;
+   background-color: var(--color-base-100);
    box-shadow: 0 0 5px black;
 }
 
 header {
    height: 10rem;
    width: 100%;
-   background-color: #42647f;
+   background-color: var(--color-accent);
    position: absolute;
    z-index: -1;
 }
@@ -84,7 +86,7 @@ header {
 nav a {
    height: 100%;
    padding: 0.5rem 0.75rem;
-   color: #888888;
+   color: var(--color-base-30);
    line-height: 1.5rem;
    text-align: center;
    cursor: pointer;
@@ -93,12 +95,12 @@ nav a {
 }
 
 nav a:hover {
-   color: var(--accent);
-   background-color: var(--color85);
+   color: var(--color-accent);
+   background-color: var(--color-base-60);
 }
 
 #current {
-   color: var(--accent);
+   color: var(--color-accent);
    font-weight: bold;
 }
 
@@ -110,12 +112,12 @@ p {
 }
 
 h1 {
-   color: #666666;
+   color: var(--color-base-20);
    font-size: 1.5em;
 }
 
 h2 {
-   color: #666666;
+   color: var(--color-base-20);
    font-size: 1.2em;
 }
 
@@ -128,23 +130,23 @@ p, h2 {
    margin-top: 4rem;
    padding: 2rem;
    /* font-size: 14px; -- problem as it isn't the main parent NOTICE ME */
-   background-color: var(--secondary);
+   background-color: var(--color-base-100);
 }
 
 .wrapper.main a {
    font-weight: bold;
-   color: var(--accent);
+   color: var(--color-accent);
    text-decoration: none;
 }
 
 /* information */
 div.goals {
-   background-color: var(--color75);
+   background-color: var(--color-base-60);
    padding: 2rem;
 }
 
 h2.goals {
-   color: var(--primary);
+   color: var(--color-base-00);
    margin: 0;
 }
 
@@ -169,5 +171,5 @@ dt, dd {
 }
 
 dt:nth-of-type(odd), dd:nth-of-type(odd) {
-   background-color: var(--color75);
+   background-color: var(--color-base-60);
 }
