--- a/style.css
+++ b/style.css
@@ -77,6 +77,7 @@ header {
    align-items: center;
    justify-content: left;
    flex-wrap: nowrap;   
+   font-size: 15px;
 }
 
 .wrapper.nav a:not(:first-child) {
@@ -85,6 +86,7 @@ header {
 
 nav a {
    height: 100%;
+   font-size: 1em;
    padding: 0.5rem 0.75rem;
    color: var(--color-base-30);
    line-height: 1.5rem;
