--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 /* font importing */
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=EB+Garamond:ital@0;1&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&display=swap');
 
 * {
@@ -19,137 +20,144 @@
 
 /* semantic blocks */
 body {
-    background-color: var(--color-base-60);
+   background-color: var(--color-base-60);
  }
  
  nav {
-    width: 100%;
-    height: 4rem;
-    background-color: var(--color-base-100);
-    box-shadow: 0 0 5px black;
+   width: 100%;
+   height: 4rem;
+   background-color: var(--color-base-100);
+   box-shadow: 0 0 5px black;
  }
  
  header {
-    height: 10rem;
-    width: 100%;
-    background-color: var(--color-accent);
-    position: absolute;
-    z-index: -1;
+   height: 10rem;
+   width: 100%;
+   background-color: var(--color-accent);
+   position: absolute;
+   z-index: -1;
  }
 
  .wrapper {
-    width: 1000px;
-    height: 100%;
-    margin: 0 auto;
-    box-sizing: border-box;
+   width: 1000px;
+   height: 100%;
+   margin: 0 auto;
+   box-sizing: border-box;
+ }
+
+ footer {
+   width: 100%;
+   height: 3rem;
+   margin: 2rem auto 0;
+   box-sizing: border-box;
  }
 
  /* responsive design */
 @media screen and (min-width: 1400px) {
-    .wrapper {
-       width: 1000px;
-    }
+   .wrapper {
+      width: 1000px;
+   }
 }
  
 @media screen and (max-width: 1400px) and (min-width: 1200px) {
-    .wrapper {
-       width: 800px;
-    }
+   .wrapper {
+      width: 800px;
+   }
 }
  
 @media screen and (max-width: 1200px) and (min-width: 1000px) {
-    .wrapper {
-       width: 600px;
-    }
+   .wrapper {
+      width: 600px;
+   }
 }
  
 @media screen and (orientation: portrait) {
-    .wrapper {
-       width: 100%;
-    }
-    /* reminder: remove sidebar when portrait */
+   .wrapper {
+      width: 100%;
+   }
+   /* reminder: remove sidebar when portrait */
 }
 
 /* nav */
 nav .wrapper {
-    padding: 1.25rem 2rem;
-    display: flex;
-    align-items: center;
-    justify-content: left;
-    flex-wrap: nowrap;   
-    font-size: 15px;
- }
+   padding: 1.25rem 2rem;
+   display: flex;
+   align-items: center;
+   justify-content: left;
+   flex-wrap: nowrap;   
+   font-size: 15px;
+}
  
- nav a {
-    height: 100%;
-    font-size: 1em;
-    padding: 0.5rem 0.75rem;
-    color: var(--color-base-30);
-    line-height: 1.5rem;
-    text-align: center;
-    cursor: pointer;
-    text-decoration: none;
-    transition: color 75ms, background-color 75ms;
- }
+nav a {
+   height: 100%;
+   font-size: 1em;
+   padding: 0.5rem 0.75rem;
+   color: var(--color-base-30);
+   line-height: 1.5rem;
+   text-align: center;
+   cursor: pointer;
+   text-decoration: none;
+   transition: color 75ms, background-color 75ms;
+}
 
- nav a:hover {
-    color: var(--color-accent);
-    background-color: rgba(0,0,0,0.25);
- }
+nav a:hover {
+   color: var(--color-accent);
+   background-color: rgba(0,0,0,0.25);
+}
 
 nav .wrapper a:not(:first-child) {
-    margin-left: 2rem;
- }
+   margin-left: 2rem;
+}
  
- #current {
-    color: var(--color-accent);
-    font-weight: bold;
- }
+#current {
+   color: var(--color-accent);
+   font-weight: bold;
+}
 
- /* text formatting */
+/* text formatting */
 p {
-    font-size: 1em;
-    line-height: 1.5em;
-    margin-bottom: 0.75rem;
- }
+   font-size: 1em;
+   line-height: 1.5em;
+   margin-bottom: 0.75rem;
+}
  
 h1 {
-    color: var(--color-base-20);
-    font-size: 1.5em;
-    margin-bottom: 1rem;
- }
+   color: var(--color-base-20);
+   font-size: 1.5em;
+   margin-bottom: 1rem;
+}
  
 h2 {
-    color: var(--color-base-20);
-    font-size: 1.2em;
-    margin-bottom: 0.75rem;
- }
+   color: var(--color-base-20);
+   font-size: 1.2em;
+   margin-bottom: 0.75rem;
+}
 
  /* main */
 main .wrapper {
-    margin-top: 4rem;
-    padding: 2rem;
-    font-size: 15px;
-    background-color: var(--color-base-100);
+   margin-top: 4rem;
+   padding: 2rem;
+   font-size: 15px;
+   background-color: var(--color-base-100);
 }
 
 main article, main .wrapper a {
-    font-size: inherit;
+   font-size: inherit;
 }
 
 main .wrapper a {
-    font-weight: bold;
-    color: var(--color-accent);
-    text-decoration: none;
+   font-weight: bold;
+   color: var(--color-accent);
+   text-decoration: none;
 }
 
 main article {
-    margin-bottom: 1.5rem;
+   margin-bottom: 1.5rem;
 }
 
 main article:last-child, main article:last-child > :last-child {
-    margin-bottom: 0;
- }
+   margin-bottom: 0;
+}
 
 /* information */
 div.goals {
@@ -184,4 +192,27 @@ dt, dd {
 
 dt:nth-of-type(odd), dd:nth-of-type(odd) {
    background-color: var(--color-base-60);
+}
+
+/* footer */
+footer .wrapper {
+   padding: 0 0.5rem;
+   font-family: 'EB Garamond', serif;
+   display: flex;
+   flex-wrap: nowrap;
+   justify-content: space-between;
+   align-items: center;
+}
+
+footer h3 {
+   font-family: inherit;
+   font-weight: normal;
+}
+
+footer span {
+   color: var(--color-base-30);
+   font-size: 0.8rem;
+   font-family: inherit;
+   font-style: italic;
+   font-variant-numeric: oldstyle-nums;
 }
