--- a/style.css
+++ b/style.css
@@ -83,8 +83,10 @@ nav .left a {
 }
 
 nav .center a {
-   padding: 0.75rem 1rem;
+   padding: 0.5rem 1rem;
+   line-height: 1.5rem;
    color: var(--base-30);
+   font-size: 1em;
    text-decoration: none;
    transition: background-color 100ms, color 100ms;
 }
