--- a/temp.css
+++ b/temp.css
@@ -21,12 +21,9 @@
     --base-90: #f8f8f8;
     --base-100: #ffffff;
     --accent-main: #42647f;
+    --accent-main-rgb: 66, 100, 127;
     --accent-secondary: #548d4a;
     --accent-tertiary: #d78d2c;
-}
-
-body {
-    background-color: var(--base-90);
 }
 
 /* wrappers */
@@ -108,7 +105,7 @@ nav a:not(:first-child) {
 }
 
 nav .center a:hover {
-    background-color: rgb(var(--base-00-rgb) / 0.15); /* rgba(var(--base-00-rgb), 0.15) HOORAY FOR CSS COLOUR MODULE LEVEL 4*/
+    background-color: rgb(var(--base-00-rgb) / 0.15); /* rgba(var(--base-00-rgb), 0.15) */
     color: var(--accent-main);
 }
 
@@ -121,15 +118,25 @@ nav a#current {
 /* main container */
 div#container aside {
     z-index: 5;
-    height: calc(100vh - 4.5rem);
+    height: calc(100vh - 4.5rem - 1px);
     position: sticky;
-    top: 4.5rem;
+    top: calc(4.5rem + 1px);
 }
 
 div#container .left {
     width: 22rem;
     background-color: var(--base-90);
     border-right: 1px solid var(--base-70);
+}
+
+div#container .left.background {
+    z-index: -10;
+    width: 50%;
+    height: calc(100vh - 4.5rem - 1px);
+    position: fixed;
+    top: calc(4.5rem + 1px);
+    left: 0;
+    background-color: var(--base-90);
 }
 
 div#container .right {
@@ -147,4 +154,100 @@ div#container .center {
 /* main content */
 main {
     background-color: var(--base-100);
+    font-size: 15px;
+}
+
+p {
+    font-size: 1em;
+    line-height: 1.5em;
+    margin-bottom: 1rem;
+}
+  
+h1 {
+    color: var(--color-base-20);
+    font-size: 1.5em;
+    margin-bottom: 1.25rem;
+}
+  
+h2 {
+    color: var(--color-base-20);
+    font-size: 1.2em;
+    margin-bottom: 1rem;
+}
+
+article a {
+    color: var(--accent-main);
+    text-decoration: underline;
+}
+
+article b {
+    color: var(--accent-secondary);
+    font-weight: bold;
+}
+
+article#header {
+    width: 100%;
+    height: 10rem;
+}
+
+header {
+    width: 100%;
+    height: 100%;
+    border-radius: 15px;
+    background-color: var(--accent-main);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+main article:not(:last-of-type) {
+    margin-bottom: 1.5rem;
+}
+
+article > :last-child {
+    margin-bottom: 0;
+}
+
+div.goals {
+    padding: 1rem 1.5rem;
+    margin-bottom: 1rem;
+    background-color: rgba(var(--accent-main-rgb), 0.2);
+    border-left: 5px solid var(--accent-main);
+}
+
+h2.goals {
+    margin-bottom: 0.5rem;
+    color: var(--accent-main);
+    font-size: 1.2em;
+}
+
+div.goals ol {
+    padding-left: 2rem;
+}
+
+div.goals li {
+    padding-left: 1em;
+    line-height: 2em;
+}
+
+@media only screen and (max-width: calc(400px + 22rem)) {
+    nav .center {
+        display: none;
+    }
+ 
+    nav .left {
+        width: 100%;
+        border-right: none;
+        justify-content: center;
+    }
+}
+
+@media only screen and (min-width: calc(400px + 22rem)) and (max-width: calc(400px + 37rem)) {
+    aside .right {
+        display: none;
+    }
+ 
+    main .center {
+        width: calc(100% - 22rem);
+    }
 }
