--- a/style.css
+++ b/style.css
@@ -1,169 +1,284 @@
-/* font import */
+/* fonts */
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=EB+Garamond:ital@0;1&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&display=swap');
 
+/* general styles */
 * {
-   margin: 0;
-   box-sizing: border-box;
-   font-family: 'Open Sans', 'Lato', sans-serif;
+    margin: 0;
+    box-sizing: border-box;
+    font-family: 'Open Sans', 'Lato', sans-serif;
 }
 
 :root {
-   font-size: 16px;
-   --base-00: #000000;
-   --base-00-rgb: 0, 0, 0;
-   --base-10: #444444;
-   --base-30: #888888;
-   --base-50: #bbbbbb;
-   --base-70: #dddddd;
-   --base-100: #ffffff;
-   --accent-main: #42647f;
-   --accent-secondary: #548d4a;
-   --accent-tertiary: #d78d2c;
+    font-size: 16px;
+    --base-00: #000000;
+    --base-00-rgb: 0, 0, 0;
+    --base-10: #444444;
+    --base-30: #888888;
+    --base-50: #bbbbbb;
+    --base-70: #dddddd;
+    --base-90: #f8f8f8;
+    --base-100: #ffffff;
+    --accent-main: #42647f;
+    --accent-main-rgb: 66, 100, 127;
+    --accent-secondary: #548d4a;
+    --accent-tertiary: #d78d2c;
 }
 
-/* navigational bar */
+/* wrappers */
+nav, div#container {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    flex-direction: row;
+    flex-wrap: nowrap;
+}
+
+.wrapper {
+    width: 100%;
+    max-width: 1692px; /* 22rem + 1100px + 15rem */
+    height: 100%;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: nowrap;
+}
+
+/* navigation */
 nav {
-   width: 100%;
-   height: 4.5rem;
-   box-sizing: content-box;
-   position: sticky;
-   top: 0;
-   display: flex;
-   justify-content: center;
-   background-color: var(--base-100);
-   border-bottom: 1px solid var(--base-70);
-   font-size: 15px;
+    z-index: 10;
+    height: 4.5rem;
+    box-sizing: content-box;
+    position: sticky;
+    top: 0;
+    background-color: var(--base-100);
+    border-bottom: 1px solid var(--base-70);
+    font-size: 15px;
 }
 
 nav .wrapper {
-   width: 100%;
-   max-width: calc(22rem + 1100px + 15rem); /* left sidebar + content + right sidebar */
-   height: 100%;
-   padding: 1rem 0;
-   display: flex;
-   flex-direction: row;
+    padding: 1rem 0;
 }
 
-nav .left, nav .center, nav .center div {
-   display: flex; /* flexbox for divisions prevents whitespace between a-tags */
-   flex-direction: row;
-   flex-wrap: nowrap;
+nav div, nav a { /* all containers (.left, .right, and a-tag divs) */
+    height: 100%;
+}
+
+nav div {
+    display: flex; /* work-around for whitespaces between inline-blocks */
+    flex-direction: row;
+    flex-wrap: nowrap;
 }
 
 nav .left {
-   width: 22rem;
-   height: 100%;
-   padding-left: 2rem;
-   border-right: 1px solid var(--base-70);
+    width: 22rem;
+    padding-left: 2rem;
+    border-right: 1px solid var(--base-70);
 }
 
 nav .center {
-   width: calc(100% - 22rem);
-   height: 100%;
-   padding: 0 2rem;
-   justify-content: space-between;
-}
-
-nav .center div, nav a {
-   height: 100%;
-}
-
-nav a:not(:first-child) {
-   margin-left: 2rem;
+    padding: 0 2rem;
+    flex-grow: 1;
+    justify-content: space-between;
 }
 
 nav .left a {
-   height: 100%;
-   padding: 0 1rem;
-   line-height: 2.5rem;
-   color: var(--base-10);
-   font-size: 1.75em;
-   font-weight: bold;
-   text-decoration: none;
+    padding: 0 1rem;
+    line-height: 2.5rem;
+    color: var(--base-10);
+    font-size: 1.75em;
+    font-weight: bold;
+    text-decoration: none;
 }
 
 nav .center a {
-   padding: 0.5rem 1rem;
-   line-height: 1.5rem;
-   color: var(--base-30);
-   font-size: 1em;
-   text-decoration: none;
-   transition: background-color 100ms, color 100ms;
+    padding: 0.5rem 1rem;
+    line-height: 1.5rem;
+    color: var(--base-30);
+    font-size: 1em;
+    text-decoration: none;
+    transition: background-color 100ms, color 100ms;
+}
+
+nav a:not(:first-child) {
+    margin-left: 2rem;
 }
 
 nav .center a:hover {
-   background-color: rgba(var(--base-00-rgb), 0.15);
-   color: var(--accent-main);
+    background-color: rgb(var(--base-00-rgb) / 0.15); /* rgba(var(--base-00-rgb), 0.15) */
+    color: var(--accent-main);
 }
 
 nav a#current {
-   border-bottom: 2px solid var(--accent-main);
-   font-weight: bold;
-   color: var(--accent-main);
+    border-bottom: 2px solid var(--accent-main);
+    font-weight: bold;
+    color: var(--accent-main);
 }
 
-/* main */
+/* main container */
+div#container aside {
+    z-index: 5;
+    height: calc(100vh - 4.5rem - 1px);
+    position: sticky;
+    top: calc(4.5rem + 1px);
+}
+
+div#container .left {
+    width: 22rem;
+    background-color: var(--base-90);
+    border-right: 1px solid var(--base-70);
+}
+
+div#container .left.background {
+    z-index: -10;
+    width: 50%;
+    height: calc(100vh - 4.5rem - 1px);
+    position: fixed;
+    top: calc(4.5rem + 1px);
+    left: 0;
+    background-color: var(--base-90);
+}
+
+div#container .right {
+    width: 15rem;
+    background-color: var(--base-100);
+    border-left: 1px solid var(--base-70);
+}
+
+div#container .center {
+    z-index: 0;
+    width: calc(100% - 37rem);
+    padding: 3rem 4rem;
+}
+
+/* main content */
 main {
-   width: 100%;
-   display: flex;
-   justify-content: center;
+    background-color: var(--base-100);
+    font-size: 15px;
 }
 
-main .wrapper {
-   width: 100%;
-   max-width: calc(22rem + 1100px + 15rem); /* left sidebar + content + right sidebar */
-   height: 100%;
-   display: flex;
-   flex-direction: row;
+p {
+    font-size: 1em;
+    line-height: 1.5em;
+    margin-bottom: 1rem;
+}
+  
+h1 {
+    color: var(--color-base-20);
+    font-size: 1.5em;
+    margin-bottom: 1.25rem;
+}
+  
+h2 {
+    color: var(--color-base-20);
+    font-size: 1.2em;
+    margin-bottom: 1rem;
 }
 
-main .left {
-   width: 22rem;
-   height: calc(100vh - 4.5rem);
-   position: sticky;
-   top: 4.5rem;
-   border-right: 1px solid var(--base-70);
+article a {
+    color: var(--accent-main);
+    text-decoration: underline;
 }
 
-main .center {
-   width: calc(100% - 22rem - 15rem);
-   padding: 3rem 4rem;
-   /* overflow-y: auto; */
+article b {
+    color: var(--accent-secondary);
+    font-weight: bold;
 }
 
-main .right {
-   width: 15rem;
-   height: calc(100vh - 4.5rem);
-   position: sticky;
-   top: 4.5rem;
-   border-left: 1px solid var(--base-70);
+article#header {
+    width: 100%;
+    height: 10rem;
 }
 
-/* footer */
-footer {
-   width: 100%;
-   height: 4.5rem;
-   border-top: 1px solid var(--base-70);
+header {
+    width: 100%;
+    height: 100%;
+    border-radius: 15px;
+    background-color: var(--accent-main);
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
-footer .wrapper {
-   width: 100%;
-   max-width: calc(22rem + 1100px + 15rem); /* left sidebar + content + right sidebar */
-   height: 4.5rem;
-   padding: 1rem 2rem;
+main article:not(:last-of-type) {
+    margin-bottom: 1.5rem;
+}
+
+article > :last-child {
+    margin-bottom: 0;
+}
+
+div.goals {
+    padding: 1rem 1.5rem;
+    margin-bottom: 1rem;
+    background-color: rgba(var(--accent-main-rgb), 0.2);
+    border-left: 5px solid var(--accent-main);
+}
+
+h2.goals {
+    margin-bottom: 0.5rem;
+    color: var(--accent-main);
+    font-size: 1.2em;
+}
+
+div.goals ol {
+    padding-left: 2rem;
+}
+
+div.goals li {
+    padding-left: 1em;
+    line-height: 2em;
 }
 
 /* responsive design */
-@media only screen and (max-width: calc(400px + 22rem)) {
-   nav .center {
-      display: none;
-   }
+@media only screen and (max-width: calc(530px + 37rem)) {
+    aside.right {
+        display: none;
+    }
+ 
+    div#container .center {
+        width: calc(100% - 22rem);
+    }
+}
 
-   nav .left {
-      width: 100%;
-      border-right: none;
-      justify-content: center;
-   }
- }
+@media only screen and (max-width: calc(530px + 22rem)) {
+    aside.left {
+        display: none;
+    }
+
+    div#container .left.background {
+        display: none;
+    }
+
+    div#container .center {
+        width: 100%;
+    }
+
+    nav .left {
+        width: 15rem;
+    }   
+}
+
+@media only screen and (max-width: 450) {
+    nav .center {
+        display: none;
+    }
+ 
+    nav .left {
+        width: 100%;
+        border-right: none;
+        justify-content: center;
+    }
+}
+
+@media only screen and (max-width: 800px) {
+    nav .center {
+        display: none;
+    }
+ 
+    nav .left {
+        width: 100%;
+        border-right: none;
+        justify-content: center;
+    }
+}
