--- a/style.css
+++ b/style.css
@@ -237,6 +237,17 @@ div.goals {
    line-height: 1.75em;
 }
 
+ul {
+   list-style: none;
+   padding-left: 1em;
+   margin: -0.75rem 0 0.25rem 0;
+}
+ul li:before {
+   content: "-";
+   position: absolute;
+   margin-left: -1em;
+}
+
 /* sidebar */
 #sidebar {
    position: sticky;
