--- a/style.css
+++ b/style.css
@@ -245,6 +245,19 @@ main article:not(:last-of-type) {
     margin-bottom: 1.5rem;
 }
 
+main ul {
+    list-style: none;
+    padding-left: 1em;
+
+}
+
+ul li:before {
+content: "-";
+position: absolute;
+margin-left: -1em;
+}
+
+
 article > :last-child {
     margin-bottom: 0;
 }
