--- a/simulation.css
+++ b/simulation.css
@@ -40,7 +40,10 @@
 /* containers */
 main, .container {
     width: 100%;
+    height: 100%;
 }
+
+.container 
 
 .text.container p {
     height: 0;
