--- a/simulation.css
+++ b/simulation.css
@@ -21,7 +21,7 @@
     --base-90: #f8f8f8;
     --base-100: #ffffff;
     --accent-main: #42647f;
-    --accent-main-rgb: 66, 100, 127;
+    --background-main: #0078D7;
     --accent-secondary: #548d4a;
     --accent-tertiary: #d78d2c;
 }
@@ -38,12 +38,34 @@
 }
 
 /* containers */
-main, .container {
+main, main > .container {
     width: 100%;
     height: 100%;
 }
 
-.container 
+.container#phase-1 {
+    display: none;
+    background-color: var(--background-main);
+}
+
+/* phase 2 */
+.container#phase-2 {
+    height: 70%;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    background-color: var(--background-main);
+}
+
+#phase-2 .warning {
+    height: 40%;
+    background-color: red;
+}
+
+#phase-2 .text {
+    height: 30%;
+    background-color: blue;
+}
 
 .text.container p {
     height: 0;
