--- a/style.css
+++ b/style.css
@@ -254,6 +254,7 @@ main article:not(:last-of-type) {
 main ul {
     list-style: none;
     padding-left: 1em;
+    margin: -0.75em 0 0.25em 0;
 
 }
 
