--- a/simulation.css
+++ b/simulation.css
@@ -1,108 +1,128 @@
 /* fonts */
+@import url('https://fonts.googleapis.com/css2?family=Source+Code+Pro:ital,wght@0,300;0,400;0,500;0,600;1,300;1,400;1,500;1,600&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=EB+Garamond:ital@0;1&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&display=swap');
 
 /* general styles */
 * {
     margin: 0;
     box-sizing: border-box;
-    font-family: 'Open Sans', 'Lato', sans-serif;
 }
 
 :root {
     font-size: 16px;
+    font-family: 'Open Sans', 'Lato', sans-serif;
     --base-00: #000000;
-    --base-00-rgb: 0 0 0;
-    --base-10: #444444;
-    --base-30: #888888;
-    --base-50: #bbbbbb;
+    --base-10: #252525;
+    --base-30: #505050;
+    --base-50: #888888;
     --base-70: #dddddd;
     --base-90: #f8f8f8;
     --base-100: #ffffff;
-    --accent-main: #42647f;
     --background-main: #0078D7;
-    --accent-secondary: #548d4a;
-    --accent-tertiary: #d78d2c;
+    --accent-red: #ef5d5d;
+    --accent-green: #559e48;
+    --accent-yellow: #d7c02c;
 }
 
-/* animations */
-@keyframes show {
+body > div, .wrapper {
+    width: 100%;
+    height: 100%;
+}
+
+c-red {
+    color: var(--accent-red);
+}
+
+c-green {
+    color: var(--accent-green);
+}
+
+c-yellow {
+    color: var(--accent-yellow);
+}
+
+/* animation */
+@keyframes print {
     0% {visibility: hidden; height: 0;}
-    100% {visibility: visible; height: 1.5rem;}
+    100% {visibility: visible; height: 100%;}
 }
 
-@keyframes hide {
-    0% {visibility: visible; height: 1.5rem;}
+@keyframes clear {
+    0% {visibility: visible; height: 100%;}
     100% {visibility: hidden; height: 0;}
 }
 
-/* containers */
-main, main > .container {
-    width: 100%;
-    height: 100%;
+/* phase 3 */
+#phase-3 {
+    background-color: var(--base-10);
 }
 
-.container#phase-1 {
-    display: none;
-    background-color: var(--background-main);
+#phase-3 .wrapper {
+    max-width: 1600px;
+    padding: 4rem;
+    margin: 0 auto;
 }
 
-/* phase 2 */
-.container#phase-2 {
-    height: 100%;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    background-color: var(--background-main);
-}
-
-#phase-2 div {
-    width: 100%;
-}
-
-#phase-2 .warning {
-    height: 40%;
-    display: flex;
-    flex-direction: column-reverse;
-    background-color: red;
-    color: white;
-}
-
-#phase-2 .text {
-    height: 60%;
-    background-color: blue;
-}
-
-.text.container p {
+#phase-3 p {
+    font-family: 'Source Code Pro', serif;
     height: 0;
+    overflow: hidden;
+    color: var(--base-90);
+    line-height: 1.75rem;
+}
+
+main div {
+    margin-bottom: 1.75rem;
+}
+
+/* line 1 */
+#line-1 {
+    height: 8.75rem;
+}
+
+#line-1 p{
+    animation: print 15s steps(5, end) forwards;
+}
+
+/* line 2 */
+#line-2 {
+    height: 1.75rem;
+}
+
+#line-2 p {
     visibility: hidden;
+    height: 0;
 }
 
-.text.container p:nth-child(1) {
-    animation: show 0s linear 0s forwards, hide 0s linear forwards 3s;
+#line-2 p:nth-child(1) {
+    animation: print 0s 18s forwards, clear 0s 20s forwards;
 }
 
-.text.container p:nth-child(2) {
-    animation: show 0s linear 3s forwards, hide 0s linear forwards 6s;
+#line-2 p:nth-child(2) {
+    animation: print 0s 20s forwards, clear 0s 22s forwards;
 }
 
-.text.container p:nth-child(3) {
-    animation: show 0s linear 6s forwards, hide 0s linear forwards 9s;
+#line-2 p:nth-child(3) {
+    animation: print 0s 22s forwards, clear 0s 24s forwards;
 }
 
-.text.container p:nth-child(4) {
-    animation: show 0s linear 9s forwards, hide 0s linear forwards 12s;
+#line-2 p:nth-child(4) {
+    animation: print 0s 24s forwards, clear 0s 26s forwards;
 }
 
-.text.container p:nth-child(5) {
-    animation: show 0s linear 12s forwards, hide 0s linear forwards 15s;
+#line-2 p:nth-child(5) {
+    animation: print 0s 26s forwards, clear 0s 28s forwards;
 }
 
-.text.container p:nth-child(6) {
-    animation: show 0s linear 15s forwards, hide 0s linear forwards 18s;
+#line-2 p:nth-child(6) {
+    animation: print 0s 28s forwards, clear 0s 30s forwards;
 }
 
-.text.container p:nth-child(7) {
-    animation: show 0s linear 18s forwards, hide 0s linear forwards 21s;
+#line-2 p:nth-child(7) {
+    animation: print 0s 30s forwards, clear 0 33s forwards;
+}
+
+#line-2 p:nth-child(8) {
+    animation: print 0s 33s forwards;
 }
