--- a/style.css
+++ b/style.css
@@ -268,6 +268,13 @@ article > :last-child {
     margin-bottom: 0;
 }
 
+/* Footer */
+footer p {
+    color: var(--base-30);
+    font-style: italic;
+    text-align: center;
+}
+
 /* goals */
 div.goals {
     padding: 1rem 1.5rem;
