--- a/simulation.css
+++ b/simulation.css
@@ -132,3 +132,31 @@ main div {
 #line-2 p:nth-child(8) {
     animation: print 0s 33s forwards;
 }
+
+/* #line-2 p:nth-child(1) {
+    animation: overwrite 4s steps(2, end) 0s forwards;
+}
+
+#line-2 p:nth-child(2) {
+    animation: overwrite 4s steps(2, end) 2s forwards;
+}
+
+#line-2 p:nth-child(3) {
+    animation: overwrite 4s steps(2, end) 4s forwards;
+}
+
+#line-2 p:nth-child(4) {
+    animation: overwrite 4s steps(2, end) 6s forwards;
+}
+
+#line-2 p:nth-child(5) {
+    animation: overwrite 4s steps(2, end) 8s forwards;
+}
+
+#line-2 p:nth-child(6) {
+    animation: overwrite 4s steps(2, end) 10s forwards;
+}
+
+#line-2 p:nth-child(7) {
+    animation: overwrite 4s steps(2, end) 12s forwards;
+} */
