--- a/temp.css
+++ b/temp.css
@@ -1,288 +1,125 @@
 /* fonts */
+@import url('https://fonts.googleapis.com/css2?family=Source+Code+Pro:ital,wght@0,300;0,400;0,500;0,600;1,300;1,400;1,500;1,600&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=EB+Garamond:ital@0;1&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&display=swap');
 
 /* general styles */
 * {
     margin: 0;
     box-sizing: border-box;
-    font-family: 'Open Sans', 'Lato', sans-serif;
 }
 
 :root {
     font-size: 16px;
+    font-family: 'Open Sans', 'Lato', sans-serif;
     --base-00: #000000;
-    --base-00-rgb: 0, 0, 0;
-    --base-10: #444444;
-    --base-30: #888888;
-    --base-50: #bbbbbb;
+    --base-10: #252525;
+    --base-30: #505050;
+    --base-50: #888888;
     --base-70: #dddddd;
     --base-90: #f8f8f8;
     --base-100: #ffffff;
-    --accent-main: #42647f;
-    --accent-main-rgb: 66, 100, 127;
-    --accent-secondary: #548d4a;
-    --accent-tertiary: #d78d2c;
+    --background-main: #0078D7;
+    --accent-red: #ef5d5d;
+    --accent-green: #559e48;
+    --accent-yellow: #d7c02c;
 }
 
-/* wrappers */
-nav, div#container {
-    width: 100%;
-    display: flex;
-    justify-content: center;
-    flex-direction: row;
-    flex-wrap: nowrap;
-}
-
-.wrapper {
-    width: 100%;
-    max-width: 1692px; /* 22rem + 1100px + 15rem */
-    height: 100%;
-    display: flex;
-    flex-direction: row;
-    flex-wrap: nowrap;
-}
-
-/* navigation */
-nav {
-    z-index: 10;
-    height: 4.5rem;
-    box-sizing: content-box;
-    position: sticky;
-    top: 0;
-    background-color: var(--base-100);
-    border-bottom: 1px solid var(--base-70);
-    font-size: 15px;
-}
-
-nav .wrapper {
-    padding: 1rem 0;
-}
-
-nav div, nav a { /* all containers (.left, .right, and a-tag divs) */
-    height: 100%;
-}
-
-nav div {
-    display: flex; /* work-around for whitespaces between inline-blocks */
-    flex-direction: row;
-    flex-wrap: nowrap;
-}
-
-nav .left {
-    width: 22rem;
-    padding-left: 2rem;
-    border-right: 1px solid var(--base-70);
-}
-
-nav .center {
-    padding: 0 2rem;
-    flex-grow: 1;
-    justify-content: space-between;
-}
-
-nav .left a {
-    padding: 0 1rem;
-    line-height: 2.5rem;
-    color: var(--base-10);
-    font-size: 1.75em;
-    font-weight: bold;
-    text-decoration: none;
-}
-
-nav .center a {
-    padding: 0.5rem 1rem;
-    line-height: 1.5rem;
-    color: var(--base-30);
-    font-size: 1em;
-    text-decoration: none;
-    transition: background-color 100ms, color 100ms;
-}
-
-nav a:not(:first-child) {
-    margin-left: 2rem;
-}
-
-nav .center a:hover {
-    background-color: rgb(var(--base-00-rgb) / 0.15); /* rgba(var(--base-00-rgb), 0.15) */
-    color: var(--accent-main);
-}
-
-nav a#current {
-    border-bottom: 2px solid var(--accent-main);
-    font-weight: bold;
-    color: var(--accent-main);
-}
-
-/* main container */
-div#container aside {
-    z-index: 5;
-    height: calc(100vh - 4.5rem - 1px);
-    position: sticky;
-    top: calc(4.5rem + 1px);
-}
-
-div#container .left {
-    width: 22rem;
-    background-color: var(--base-90);
-    border-right: 1px solid var(--base-70);
-}
-
-div#container .left.background {
-    z-index: -10;
-    width: 50%;
-    height: calc(100vh - 4.5rem - 1px);
-    position: fixed;
-    top: calc(4.5rem + 1px);
-    left: 0;
-    background-color: var(--base-90);
-}
-
-div#container .right {
-    width: 15rem;
-    background-color: var(--base-100);
-    border-left: 1px solid var(--base-70);
-}
-
-div#container .center {
-    z-index: 0;
-    width: calc(100% - 37rem);
-    padding: 3rem 4rem;
-}
-
-/* main content */
-main {
-    background-color: var(--base-100);
-    font-size: 15px;
-}
-
-p {
-    font-size: 1em;
-    line-height: 1.5em;
-    margin-bottom: 1rem;
-}
-  
-h1 {
-    color: var(--color-base-20);
-    font-size: 1.5em;
-    margin-bottom: 1.25rem;
-}
-  
-h2 {
-    color: var(--color-base-20);
-    font-size: 1.2em;
-    margin-bottom: 1rem;
-}
-
-article a {
-    color: var(--accent-main);
-    text-decoration: underline;
-}
-
-article b {
-    color: var(--accent-secondary);
-    font-weight: bold;
-}
-
-article#header {
-    width: 100%;
-    height: 10rem;
-}
-
-header {
+body > div, .wrapper {
     width: 100%;
     height: 100%;
-    border-radius: 15px;
-    background-color: var(--accent-main);
-    display: flex;
-    align-items: center;
-    justify-content: center;
 }
 
-main article:not(:last-of-type) {
-    margin-bottom: 1.5rem;
+c-red {
+    color: var(--accent-red);
 }
 
-article > :last-child {
-    margin-bottom: 0;
+c-green {
+    color: var(--accent-green);
 }
 
-div.goals {
-    padding: 1rem 1.5rem;
-    margin-bottom: 1rem;
-    background-color: rgba(var(--accent-main-rgb), 0.2);
-    border-left: 5px solid var(--accent-main);
+c-yellow {
+    color: var(--accent-yellow);
 }
 
-h2.goals {
-    margin-bottom: 0.5rem;
-    color: var(--accent-main);
-    font-size: 1.2em;
+/* animation */
+@keyframes print {
+    0% {visibility: hidden; height: 0;}
+    100% {visibility: visible; height: 100%;}
 }
 
-div.goals ol {
-    padding-left: 2rem;
+@keyframes clear {
+    0% {visibility: visible; height: 100%;}
+    100% {visibility: hidden; height: 0;}
 }
 
-div.goals li {
-    padding-left: 1em;
-    line-height: 2em;
+@keyframes overwrite {
+    0% {visibility: visible; height: 0;}
+    50% {height: 100%;}
+    100% {visibility: hidden; height: 0;}
 }
 
-/* responsive design */
-/* layout */
-@media only screen and (max-width: calc(530px + 37rem)) {
-    aside.right {
-        display: none;
-    }
- 
-    div#container .center {
-        width: calc(100% - 22rem);
-    }
+/* phase 3 */
+#phase-3 {
+    background-color: var(--base-10);
 }
 
-@media only screen and (max-width: calc(530px + 22rem)) {
-    aside.left {
-        display: none;
-    }
-
-    div#container .left.background {
-        display: none;
-    }
-
-    div#container .center {
-        width: 100%;
-        padding: 2rem;
-    }
-
-    nav .left {
-        width: 15rem;
-    }   
+#phase-3 .wrapper {
+    max-width: 1600px;
+    padding: 4rem;
+    margin: 0 auto;
 }
 
-/* navigation bar */
-@media only screen and (max-width: 800px) {
-    nav .center {
-        display: none;
-    }
- 
-    nav .left {
-        width: 100%;
-        padding-left: 0;
-        border-right: none;
-        justify-content: center;
-    }
+#phase-3 p {
+    font-family: 'Source Code Pro', serif;
+    height: 0;
+    overflow: hidden;
+    color: var(--base-90);
+    line-height: 1.75rem;
 }
 
-@media only screen and (max-width: 450px) {
-    nav .center {
-        display: none;
-    }
- 
-    nav .left {
-        width: 100%;
-        border-right: none;
-        justify-content: center;
-    }
+main div {
+    margin-bottom: 1.75rem;
+}
+
+/* line 2 */
+#line-2 {
+    height: 1.75rem;
+}
+
+#line-2 p {
+    visibility: hidden;
+    height: 0;
+}
+
+#line-2 p:nth-child(1) {
+    animation: overwrite 4s steps(1, end) 0s forwards;
+}
+
+#line-2 p:nth-child(2) {
+    animation: overwrite 4s steps(1, end) 2s forwards;
+}
+
+#line-2 p:nth-child(3) {
+    animation: overwrite 4s steps(1, end) 4s forwards;
+}
+
+#line-2 p:nth-child(4) {
+    animation: overwrite 4s steps(1, end) 6s forwards;
+}
+
+#line-2 p:nth-child(5) {
+    animation: overwrite 4s steps(1, end) 8s forwards;
+}
+
+#line-2 p:nth-child(6) {
+    animation: overwrite 4s steps(1, end) 10s forwards;
+}
+
+#line-2 p:nth-child(7) {
+    animation: overwrite 4s steps(1, end) 12s forwards;
+}
+
+#line-2 p:nth-child(8) {
+    animation: overwrite 4s steps(1, end) 14s forwards;
 }
